--- a/ansible/fedora/playbook_create.yaml
+++ b/ansible/fedora/playbook_create.yaml
@@ -6,6 +6,7 @@
     vars:
       libvirt_version: "4.3.1"
       kube_password: "{{ lookup('file', '/home/{{ ansible_user_id }}/.crc/cache/crc_libvirt_{{ libvirt_version }}/kubeadmin-password') }}"
+      openshift_namespace: "my-kafka-project"
     vars_prompt:
       - name: "PullSecret"
         prompt: "Insert your Pull secret"
@@ -66,7 +67,7 @@
         shell: "oc login -u kubeadmin -p {{ kube_password }} https://api.crc.testing:6443"
 
       - name: Create my-kafka-project
-        shell: "oc new-project my-kafka-project"
+        shell: "oc new-project {{ openshift_namespace }}"
 
       - name: Create service account RBAC
         shell: "oc create -f /tmp/service-account.yaml"
@@ -88,10 +89,10 @@
       - name: Install Strimzi operator 0.16.2
         shell: "curl -L https://github.com/strimzi/strimzi-kafka-operator/releases/download/0.16.2/strimzi-cluster-operator-0.16.2.yaml \
           | sed 's/namespace: .*/namespace: my-kafka-project/' \
-          | kubectl -n my-kafka-project apply -f -"
+          | kubectl -n {{ openshift_namespace }} apply -f -"
 
       - name: Create kafka ephemeral cluster
-        shell: "kubectl apply -f /tmp/kafka-ephemeral.yaml -n my-kafka-project"
+        shell: "kubectl apply -f /tmp/kafka-ephemeral.yaml -n {{ openshift_namespace }}"
 
       - name: Create kafka events topic
         shell: "oc create -f /tmp/events.yaml"
@@ -104,3 +105,4 @@
 
       - name: Create kafka kiesessioninfos topic
         shell: "oc create -f /tmp/kiesessioninfos.yaml"
+
