--- a/playbook_create.yaml
+++ b/playbook_create.yaml
@@ -72,8 +72,16 @@
       - name: Add .crc/bin to the path
         shell: "export PATH=$PATH:/home/{{ansible_user_id}}/.crc/bin/"
 
+      - name: Check that oc exists in /home/{{ansible_user_id}}/.local/bin/
+        stat:
+          path: "/home/{{ ansible_user_id }}/.local/bin/oc"
+        register: stat_result
+
+      - debug: msg="stat result {{ stat_result }}"
+
       - name: Move oc from /tmp to /home/{{ansible_user_id}}/.local/bin
         command: "cp /home/{{ansible_user_id}}/.crc/bin/oc /home/{{ansible_user_id}}/.local/bin/"
+        when: stat_result.stat.exists == False
 
       - name: Login crc
         shell: "oc login -u kubeadmin -p {{ kube_password }} https://api.crc.testing:6443"
