--- a/playbook_create.yaml
+++ b/playbook_create.yaml
@@ -15,15 +15,23 @@
     tasks:
       - debug: msg="Project Name {{ nameSpace }}"
 
-      - name: Adjust etc/hosts
-        linefile:
-          dest: "/etc/hosts"
-          regexp: "^.apps-crc.testing"
-          line: "{{ item.line }}"
-            with_items:
-              - { regexp: '^oauth-openshift.apps-crc.testing', line: '192.168.130.11   oauth-openshift.apps-crc.testing' }
-              - { regexp: '^console-openshift-console.apps-crc.testing', line: '192.168.130.11   console-openshift-console.apps-crc.testing' }
-              - { regexp: '^my-cluster-kafka-bootstrap-my-kafka-project.apps-crc.testing', line: 'my-cluster-kafka-bootstrap-my-kafka-project.apps-crc.testing' }
+      - name: Check api in hosts
+        lineinfile:
+          path: /etc/hosts
+          line: 192.168.130.11   api.crc.testing
+          create: yes
+
+      - name: Check oauth in hosts
+        lineinfile:
+          path: /etc/hosts
+          line: 192.168.130.11   oauth-openshift.apps-crc.testing
+          create: yes
+
+      - name: Check console in hosts
+        lineinfile:
+          path: /etc/hosts
+          line: 192.168.130.11   console-openshift-console.apps-crc.testing
+          create: yes
 
       - name: CRC setup
         shell: "crc setup"
