--- a/playbook_crc.yaml
+++ b/playbook_crc.yaml
@@ -1,14 +1,36 @@
 ---
-- name: Install Kava. Maven, Git, CRC
+- name: Install CRC
   hosts: localhost
   gather_facts: true
 
+  vars:
+    crc_version: "1.8.0"
+
   tasks:
 
-    - name: Install Java on ReHat.
-      dnf: name=openjdk-8-jdk state=present
-      when: ansible_facts['os_family'] == "Redhat"
+    - name: Check if crc exists in /home/{{ansible_user_id}}/.local/bin/
+      stat:
+        path: "/home/{{ ansible_user_id }}/.local/bin/crc"
+      register: stat_result
 
-    - name: Install Java On Debian.
-      apt: name=openjdk-8-jdk state=present
-      when: ansible_facts['os_family'] == "Debian"
+    - name: Check if crc exists in /tmp/
+      stat:
+        path: "/tmp/crc-linux-1.8.0-amd64/crc"
+      register: stat_result
+      when: stat_result.stat.exists == False
+
+    - name: "Download crc {{crc_version}} ~2GB, this takes time and depends on your connection speed"
+      get_url:
+        url: "https://mirror.openshift.com/pub/openshift-v4/clients/crc/{{crc_version}}/crc-linux-amd64.tar.xz"
+        dest: "/tmp/crc-linux-amd64.tar.xz"
+      when: stat_result.stat.exists == False
+
+    - name: Extract crc
+      shell: "tar -xvf /tmp/crc-linux-amd64.tar.xz"
+
+    - name: Move kogito from /tmp to /home/{{ansible_user_id}}/.local/bin
+      command: "mv /tmp/crc-linux-{{crc_version}}-amd64/crc /home/{{ansible_user_id}}/.local/bin/"
+      when: stat_result.stat.exists == False
+
+    - name: crc libvirt group
+      shell: "crc config set skip-check-user-in-libvirt-group true"
